# socially-backend

./: README.md  pyproject.toml
app/: init_db.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  notifications.py  posts.py  users.py
app/core/: config.py  database.py  deps.py  security.py
app/crud/: notification.py  post.py  user.py
app/schemas/: post.py  user.py
test/: conftest.py  test_auth.py  test_posts.py
